vlib/v/checker/tests/option_fn_field_err.out
vlib/v/checker/tests/option_fn_field_err.vv:7:6: error: Option function field must be unwrapped first
    5 | fn main() {
    6 |     foo := Foo{}
    7 |     foo.f(1)
      |         ~~~~
    8 | }
