vlib/v/checker/tests/option_fn_field_err.vv
struct Foo {
	f ?fn (int)
}

fn main() {
	foo := Foo{}
	foo.f(1)
}
